--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.2",
     "next": "15.1.7",
     "react": "^19.0.0",
