--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^5.4.0"
   },
